[DG] update